--- a/hobbies.html
+++ b/hobbies.html
@@ -1,3 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head>
+
+<title> My Hobbies </title>
+</head>
+<body>
+<h3> My hobbies </h3>
+
+<ol>
+<li> Playing NBA2K </li>
+<li> Watch some animes movies </li>
+<li> Reading Manga </li> 
